--- a/app/scss/components/_card.scss
+++ b/app/scss/components/_card.scss
@@ -1,5 +1,6 @@
 @use '../abstracts/' as *;
 .card {
+  position: relative;
   background: $clr-neutral-grayish-blue;
   max-width: 27rem;
   display: flex;
@@ -24,31 +25,31 @@
     padding: 1rem;
   }
   &__divider-line {
-    padding: 1rem 0 1rem 0;
+    padding: 1rem 0 3rem 0;
   }
-  &__image-icon {
+  &__image-container {
   }
   &__button-roll {
+    position: absolute;
+    bottom: -10%;
+    right:43%;
     border: none;
     padding: 1rem;
     border-radius: 50%;
-    //transform: translateY(50%);
     background: $clr-primary-green;
 
     &:hover {
-      box-shadow: 0px 0px 20px 9px rgba(0, 255, 128, 0.40);
+      box-shadow: 0px 0px 20px 9px rgba(0, 255, 128, 0.4);
       cursor: pointer;
       animation: loading 1s ease-in-out;
-      //transform: translateY(50%);
-    }
-    &:active {
-      animation: loading 500ms ease-in-out infinite;
+
     }
   }
   &__button-roll--loading {
     animation: loading 1s ease-in-out infinite;
     pointer-events: none;
     background: $clr-neutral-blue;
+
   }
 }
 
